<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tituloappmain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intro"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#262526" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.52"
        android:gravity="center|top"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/clienteslayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" android:padding="4dp" android:background="@drawable/fondoimagebutton">

            <ImageButton
                android:id="@+id/clientesbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fondoimagebutton"
                android:src="@drawable/clients" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clientestext"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="10dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/autoslayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" android:padding="4dp" android:background="@drawable/fondoimagebutton">

            <ImageButton
                android:id="@+id/autosbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fondoimagebutton"
                android:src="@drawable/auto" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/autostext"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <View
            android:id="@+id/View01"
            android:layout_width="10dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/ventaslayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:padding="4dp" android:background="@drawable/fondoimagebutton">

            <ImageButton
                android:id="@+id/ventasbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/salesreport" android:background="@drawable/fondoimagebutton"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ventastext"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="right"
        android:layout_weight="0.02"
        android:paddingLeft="6dp">

        <Button
            android:background="@drawable/fondoimagebutton"
            android:id="@+id/irawebbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/pietext"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>